--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</header>
 
 		<nav>
-			<ul>
+			<ul id="sfmenu">
 				<li><a href="/jsp/en_savoir_plus_mon_tableau_de_bord.jsp">Mon tableau de bord</a>
 					<ul>
 						<li><a href="jsp/mes_liaisons.jsp">&gt; Mes liaisons de comptes</a></li>
@@ -57,8 +57,8 @@
 			</ul>
 		</nav>
 		
-		<ul>
-			<li><a href="https://mon.service-public.fr/portail/">Accueil</a></li>
+		<ul class="show_route">
+			<li><a href="https://mon.service-public.fr/portail/" style="text-decoration: none; font-weight: bold; color: #0275d8;">Accueil</a></li>
 			<li>&nbsp;&gt;&nbsp;Mon tableau de bord</li>
 		</ul>
 
@@ -113,7 +113,7 @@
 		</section>
 
 		<footer>
-			<div>
+			<div class="first-child">
 				<ul>
 					<li>
 						<span><a href="http://www.ojd-internet.com/chiffres-internet/7111-service-public.fr" target="_blank"><img src="img/logo-ojd.png" alt="logo du OJD"></a></span>
