--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<title>Devoir à la maison</title>
     <link rel="stylesheet" href="index.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
 	<div class="container">
-		<header>
+		<header class="head" >
 			<div>
 				<img src="img/logo_msp_Part.png" width="365" height="73">
 			</div>
@@ -19,70 +20,72 @@
 					<input type="text" name="fullText" id="rechercheInput"value="Rechercher" title="Rechercher">
 					<input type="submit" value="ok" title="Lancer la recherche"   id="ok_recherche">
 				</form>
-			</div>				
+			</div>
 		</header>
 
-		<nav>
+		<nav  class="row">
 			<ul id="sfmenu">
-				<li><a href="/jsp/en_savoir_plus_mon_tableau_de_bord.jsp">Mon tableau de bord</a>
-					<ul>
-						<li><a href="jsp/mes_liaisons.jsp">&gt; Mes liaisons de comptes</a></li>
-						<li><a href="jsp/mon_calendrier.jsp">&gt; Mon calendrier</a></li>
-						<li><a href="jsp/mon_suivi.jsp">&gt; Mon suivi</a></li>
-					</ul> 
-					<span class="flecheActive"></span>
-				</li>
-				<li><a href="/jsp/en_savoir_plus_mes_documents.jsp">Mes documents</a>
-					<ul>
-						<li><a href="jsp/msp_documents.jsp">&gt; Mon porte-documents</a></li>
-						<li><a href="jsp/bloc_note.jsp">&gt; Mon bloc-notes</a></li>
-					</ul> 
-				</li>	
-				<li><a href="jsp/en_savoir_plus_mon_profils.jsp">Mon profil</a>
-					<ul>
-						<li><a href="jsp/mon_etat_civil.jsp">&gt; Mes coordonnées</a></li>
-						<li><a href="jsp/ma_communaute.jsp">&gt; Mes contacts</a></li>
-						<li><a href="jsp/mes_options.jsp">&gt; Mes options</a></li>
-					</ul> 
-				</li>
-				<li><a href="jsp/en_savoir_plus_catalogue_des_services.jsp">Catalogue des services</a>
-					<ul>
-						<li><a href="jsp/les_demarches.jsp?menu=true">&gt; Les démarches</a></li>
-						<li><a href="jsp/les_formulaires.jsp?menu=true">&gt; Les formulaires CERFA</a></li>
-						<li><a href="hjsp/les_partenaires.jsp?menu=true">&gt; Les organismes partenaires</a></li>
-						<li><a href="http://lannuaire.service-public.fr/" target="_blank">&gt; L'annuaire de l'administration</a></li>
-						<li><a href="http://www.service-public.fr/" target="_blank">&gt; Le guide des droits et démarches</a></li>
-					</ul> 
-				</li>
+			<li class="col-md-3" style="
+				border-right: 1px solid #e5e6e6; "><a href="/jsp/en_savoir_plus_mon_tableau_de_bord.jsp">Mon tableau de bord</a>
+				<ul>
+					<li><a href="jsp/mes_liaisons.jsp">&gt; Mes liaisons de comptes</a></li>
+					<li><a href="jsp/mon_calendrier.jsp">&gt; Mon calendrier</a></li>
+					<li><a href="jsp/mon_suivi.jsp">&gt; Mon suivi</a></li>
+				</ul>
+				<span class="flecheActive"></span> </li>
+			<li class="col-md-3" style="
+			border-right: 1px solid #e5e6e6;"><a href="/jsp/en_savoir_plus_mes_documents.jsp">Mes documents</a>
+				<ul>
+				<li><a href="jsp/msp_documents.jsp">&gt; Mon porte-documents</a></li>
+				<li><a href="jsp/bloc_note.jsp">&gt; Mon bloc-notes</a></li>
+				</ul>
+			</li>
+			<li class="col-md-3" style="
+			border-right: 1px solid #e5e6e6;"><a href="jsp/en_savoir_plus_mon_profils.jsp">Mon profil</a>
+				<ul>
+				<li><a href="jsp/mon_etat_civil.jsp">&gt; Mes coordonnées</a></li>
+				<li><a href="jsp/ma_communaute.jsp">&gt; Mes contacts</a></li>
+				<li><a href="jsp/mes_options.jsp">&gt; Mes options</a></li>
+				</ul>
+			</li>
+			<li class="col-md-3" ><a href="jsp/en_savoir_plus_catalogue_des_services.jsp">Catalogue des services</a>
+				<ul >
+				<li><a href="jsp/les_demarches.jsp?menu=true">&gt; Les démarches</a></li>
+				<li><a href="jsp/les_formulaires.jsp?menu=true">&gt; Les formulaires CERFA</a></li>
+				<li><a href="hjsp/les_partenaires.jsp?menu=true">&gt; Les organismes partenaires</a></li>
+				<li><a href="http://lannuaire.service-public.fr/" target="_blank">&gt; L'annuaire de l'administration</a></li>
+				<li><a href="http://www.service-public.fr/" target="_blank">&gt; Le guide des droits et démarches</a></li>
+				</ul>
+			</li>
 			</ul>
-		</nav>
+		</nav><br />
 		
 		<ul class="show_route">
-			<li><a href="https://mon.service-public.fr/portail/" style="text-decoration: none; font-weight: bold; color: #0275d8;">Accueil</a></li>
-			<li>&nbsp;&gt;&nbsp;Mon tableau de bord</li>
+			<li><a href="https://mon.service-public.fr/portail/" style="text-decoration: none;  color: #0e5f96;">Accueil</a></li>
+			<li style="color: #0e5f96;">&nbsp;&gt;&nbsp;Mon tableau de bord</li>
 		</ul>
 
 		<section>
 			<main>
-				<h1>Mon tableau de bord</h1>
-				<div>Découvrez ci-dessous ce que vous pouvez faire dans la rubrique « Mon tableau de bord ».</div>
-				<div>
-					<div>
-						<a href="jsp/mes_liaisons.jsp"><img src="img/402_429_Liaisons.JPG" width="60" height="60">Mes liaisons de comptes</a>
+				<h1 class="fond-bleu">Mon tableau de bord</h1>
+				<div style="color:  #0e5f96;">Découvrez ci-dessous ce que vous pouvez faire dans la rubrique « Mon tableau de bord ».</div>
+				<div  class="contenu">
+					<div class="col-md-4">
+						<a href="jsp/mes_liaisons.jsp" style="text-decoration: none; "><img src="img/402_429_Liaisons.JPG" >&nbspMes liaisons de comptes</a>
 						<ul>
 							<li>Accédez d'un clic à vos comptes administratifs sans ressaisir vos identifiants et mots de passe.</li>
 							<li>Gérez vos liaisons de comptes.</li>
 						</ul>
 					</div>
-					<div>
-						<a href="jsp/mon_calendrier.jsp"><img src="img/605_403_418_picto_agenda.gif" width="60" height="60">Mon calendrier </a>
+					<div class="col-md-4">
+						<a href="jsp/mon_calendrier.jsp" style="text-decoration: none;"><img src="img/605_403_418_picto_agenda.gif" >&nbsp&nbspMon calendrier </a>
 						<ul>
 							<li>Notez et visualisez toutes vos échéances administratives.</li>
 							<li>Recevez des alertes par courriel pour vos rappels  d'échéances.</li>
 						</ul>
 					</div>
-					<div> 
-						<a href="jsp/mon_suivi.jsp"><img src="img/401_430_suivi.jpg" width="60" height="60">Mon suivi </a>
+					<div class="col-md-4">
+						<a href="jsp/mon_suivi.jsp" style="text-decoration: none;"><img src="img/401_430_suivi.jpg" >&nbspMon suivi </a>
 						<ul>
 							<li>Suivez l'avancement de vos démarches en ligne.</li>
 							<li>Consultez les messages envoyés.</li>
@@ -91,72 +94,78 @@
 				</div>
 			</main>
 
-			<aside>
+			<aside id="column-droite">
 				<div>
-					<h3>LES ASTUCES</h3>
+					<h3 class="fond-bleu">LES ASTUCES</h3>
 					<ul>
-						<li><a href="jsp/authent/page_detail_astuce_MSP.jsp?idAstuce=1001" target="_self" title="Lien vers Accédez depuis mon.service-public.fr à une nouvelle génération de démarches en ligne">Accédez depuis mon.service-public.fr à une nouvelle génération de démarches en ligne</a></li>
+						<li><a href="jsp/authent/page_detail_astuce_MSP.jsp?idAstuce=1001" style="text-decoration: none;" target="_self" title="Lien vers Accédez depuis mon.service-public.fr à une nouvelle génération de démarches en ligne">Accédez depuis mon.service-public.fr à une nouvelle génération de démarches en ligne</a></li>
 					</ul>
-					<div><a href="jsp/authent/toutes_astuces_msp.jsp">Toutes les astuces</a></div>
+					<div><a href="jsp/authent/toutes_astuces_msp.jsp" style="text-decoration: none;  color: #0e5f96;">Toutes les astuces</a></div>
 				</div>
 				<div>
-					<h3>Les actualités</h3>
+					<h3 class="fond-rouge">Les actualités</h3>
 					<ul>
-						<li><a href="jsp/authent/page_detail_actualite_MSP.jsp?idActu=11644" title="Lien vers Votre avis nous intéresse…"><span class="date">22/10/2012</span> Que pensez-vous de MSP ?</a></li>
-						<li><a href="jsp/authent/page_detail_actualite_MSP.jsp?idActu=11823" title="Lien vers Une nouvelle démarche dans le Tarn"><span class="date">10/10/2012</span> Le Conseil général du Tarn vient de déployer, une nouvelle téléprocédure .</a></li>
-						<li><a href="jsp/authent/page_detail_actualite_MSP.jsp?idActu=11643" title="Lien vers Déclarez en ligne le décès d'un proche "><span class="date">30/07/2012</span> Une nouvelle démarche en ligne sur MSP</a></li>
-						<li><a href="jsp/authent/page_detail_actualite_MSP.jsp?idActu=11631" title="Lien vers Pour les départements numérotés de 50 à 974 il ne vous reste que quelques jours pour télé-déclarer vos revenus"><span class="date">15/06/2012</span> Accédez à votre déclaration de revenus depuis MSP</a></li>
+						<li><a href="jsp/authent/page_detail_actualite_MSP.jsp?idActu=11644" style="text-decoration: none;" title="Lien vers Votre avis nous intéresse…"><span class="date" >22/10/2012</span> Que pensez-vous de MSP ?</a></li>
+						<li><a href="jsp/authent/page_detail_actualite_MSP.jsp?idActu=11823" style="text-decoration: none;" title="Lien vers Une nouvelle démarche dans le Tarn"><span class="date">10/10/2012</span> Le Conseil général du Tarn vient de déployer, une nouvelle téléprocédure .</a></li>
+						<li><a href="jsp/authent/page_detail_actualite_MSP.jsp?idActu=11643" style="text-decoration: none;" title="Lien vers Déclarez en ligne le décès d'un proche "><span class="date">30/07/2012</span> Une nouvelle démarche en ligne sur MSP</a></li>
+						<li><a href="jsp/authent/page_detail_actualite_MSP.jsp?idActu=11631" style="text-decoration: none;" title="Lien vers Pour les départements numérotés de 50 à 974 il ne vous reste que quelques jours pour télé-déclarer vos revenus"><span class="date">15/06/2012</span> Accédez à votre déclaration de revenus depuis MSP</a></li>
 					</ul>
-					<div><a href="jsp/authent/tout_actualites_msp.jsp">Toutes les actualités</a></div>
+					<div><a href="jsp/authent/tout_actualites_msp.jsp" style="color: rgb(122, 43, 43);text-decoration: none;" >Toutes les actualités</a></div>
 				</div>
 			</aside>
 		</section>
 
 		<footer>
 			<div class="first-child">
-				<ul>
-					<li>
-						<span><a href="http://www.ojd-internet.com/chiffres-internet/7111-service-public.fr" target="_blank"><img src="img/logo-ojd.png" alt="logo du OJD"></a></span>
+				<ul class="row">
+					<li class="col-md-2">
+						<a href="http://www.ojd-internet.com/chiffres-internet/7111-service-public.fr" target="_blank">
+							<img src="img/logo-ojd.png" width="70px" alt="logo du OJD">
+						</a>
 					</li>
-					<li>
+					<li class="col-md-2">
 						<p>Assistance et contact</p>
 						<ul>
-							<li><a href="jsp/authent/plan_du_site.jsp" target="_self" ><span title="">Plan du site</span></a></li>
-							<li><a href="jsp/authent/contact.jsp" target="_self"><span title="">Contact</span></a></li>
-							<li><a href="jsp/authent/aide.jsp" target="_self"><span title="">Aide</span></a></li>
-							<li><a href="jsp/authent/faqs.jsp" target="_self" ><span title="">Questions fréquentes</span></a></li>
+							<li><a href="jsp/authent/plan_du_site.jsp" target="_self">Plan du site</a></li>
+							<li><a href="jsp/authent/contact.jsp" target="_self">Contact</a></li>
+							<li><a href="jsp/authent/aide.jsp" target="_self">Aide</a></li>
+							<li><a href="jsp/authent/faqs.jsp" target="_self">Questions fréquentes</a></li>
 						</ul>
 					</li>
-					<li>
+					<li class="col-md-2">
 						<p>Informations légales</p>
 						<ul>
-							<li><a href="jsp/authent/mentions_legales.jsp"><span title="">Mentions légales</span></a></li>
-							<li><a href="jsp/authent/conditions_generales_utilisation.jsp" target="_self"><span title="">Conditions générales d'utilisation</span></a></li>
-							<li><a href="http://www.service-public.fr/%C3%A0-propos-du-site/001371.html" target="_blank"><span title="Répertoire des informations publiques - Nouvelle fenêtre">Répertoire des informations publiques</span></a></li>
+							<li><a href="jsp/authent/mentions_legales.jsp">Mentions légales</a></li>
+							<li><a href="jsp/authent/conditions_generales_utilisation.jsp" target="_self">Conditions générales d'utilisation</a></li>
+							<li><a href="http://www.service-public.fr/%C3%A0-propos-du-site/001371.html" target="_blank">Répertoire des informations publiques</a></li>
 						</ul>
 					</li>
-					<li>
+					<li class="col-md-2">
 						<p>Qualité de service</p>
 						<ul>
-							<li><a href="jsp/authent/accessibilite.jsp"><span title="">Accessibilité</span></a></li>
-							<li><a href="jsp/authent/securite.jsp" ><span title="">Sécurité</span></a></li>
-							<li><a href="jsp/authent/engagement_qualite.jsp"><span title="">Engagement qualité</span></a></li>
-							<li><a href="jsp/authent/statistiques.jsp" ><span title="">Statistiques</span></a></li>
+							<li><a href="jsp/authent/accessibilite.jsp">Accessibilité</a></li>
+							<li><a href="jsp/authent/securite.jsp">Sécurité</a></li>
+							<li><a href="jsp/authent/engagement_qualite.jsp">Engagement qualité</a></li>
+							<li><a href="jsp/authent/statistiques.jsp">Statistiques</a></li>
 						</ul>
 					</li>
-					<li>
+					<li class="col-md-2">
 						<p>Partenariat</p>
 						<ul>
-							<li><a href="jsp/authent/partenaires.jsp"><span title="">Nos organismes partenaires</span></a></li>
-							<li><a href="jsp/authent/devenir_partenaire.jsp"><span title="">Devenir partenaire ?</span></a></li>
+							<li><a href="jsp/authent/partenaires.jsp">Nos organismes partenaires</a></li>
+							<li><a href="jsp/authent/devenir_partenaire.jsp">Devenir partenaire ?</a></li>
 						</ul>
 					</li>
 				</ul>
 			</div>
-			<div>
-				<a target="_blank" href="jsp/authent/a_propos_de_la_DGME.jsp">Tous droits réservés - Direction Générale de Modernisation de l'Etat - 2012 </a> | <a title="A propos du site" href="jsp/authent/a_propos_du_site.jsp">A propos de mon.service-public.fr</a>
+			<div class="second-child">
+				<p><a target="_blank" href="jsp/authent/a_propos_de_la_DGME.jsp">Tous droits réservés - Direction Générale de Modernisation de l'Etat - 2012</a> | 
+				<a title="A propos du site" href="jsp/authent/a_propos_du_site.jsp">A propos de mon.service-public.fr</a></p>
 			</div>
 		</footer>
+		
 	</div>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
